--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
     </div>
     <div class="sec your-character">
-        <h1>Your Character</h1>
+        <h1 class="name">Your Character</h1>
     </div>
     <div class="sec enemies">
         <h1>Enemies Available To Attack</h1>
@@ -29,6 +29,7 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
-   <script src="assets/javascript/game.js"></script> 
+  <script src="assets/javascript/game2.js"></script>
+   <!-- <script src="assets/javascript/game.js"></script>  -->
 </body>
 </html>
