restart button work

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </div>
     <button class="attack">Attack</button>
     <div class="sec defender">
-        <h1>Defender</h1>
+        <h1 class="name">Defender</h1>
+    </div>
+    <div class="damage">
+        
     </div>
     <script
   src="https://code.jquery.com/jquery-3.4.1.js"
