--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="name">Your Character</h1>
     </div>
     <div class="sec enemies">
-        <h1>Enemies Available To Attack</h1>
+        <h1 class ="name">Enemies Available To Attack</h1>
     </div>
     <div class="sec fight-section">
         <h1>Fight Section</h1>
