--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="heading">
+        <h1>Star Wars RPG!</h1>
+    </div>
     <div class="sec choose">
         
     </div>
@@ -16,10 +19,10 @@
         <h1 class="name">Your Character</h1>
     </div>
     <div class="sec enemies">
-        <h1 class ="name">Enemies Available To Attack</h1>
+        <h1 class="name">Enemies Available To Attack</h1>
     </div>
     <div class="sec fight-section">
-        <h1>Fight Section</h1>
+        <h1 class="name">Fight Section</h1>
     </div>
     <button class="attack">Attack</button>
     <div class="sec defender">
